--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,8 +1,11 @@
 # BuildPro Frontend - Environment Variables Template
 # Copy to .env.local for local development
 
-# API URL - leave empty to use proxy (local dev) or set for production
-VITE_API_URL=
+# API URL - Backend API endpoint
+VITE_API_URL=http://localhost:8000
 
-# Gemini AI API Key for BuildPro AI Assistant
-VITE_GEMINI_API_KEY=your_gemini_api_key_here
+# For production deployment:
+# VITE_API_URL=https://your-api.onrender.com
+
+# NOTE: Gemini AI API Key is now backend-only for security
+# No frontend API keys needed
