--- a/render.yaml
+++ b/render.yaml
@@ -1,47 +1,66 @@
-databases:
-  - name: buildpro-db
-    plan: starter
-    databaseName: buildpro
-    user: buildpro
+# Render Deployment Configuration
 
 services:
-  # FastAPI Backend
+  # PostgreSQL Database
+  - type: pserv
+    name: buildpro-db
+    env: docker
+    plan: starter
+    region: oregon
+    databases:
+      - name: buildpro
+        user: buildpro
+
+  # Redis (Optional - for background jobs)
+  - type: redis
+    name: buildpro-redis
+    plan: starter
+    region: oregon
+    maxmemoryPolicy: allkeys-lru
+
+  # Backend API
   - type: web
     name: buildpro-api
-    runtime: python
+    env: python
+    region: oregon
     plan: starter
     buildCommand: cd apps/api && pip install -r requirements.txt
     startCommand: cd apps/api && alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port $PORT
-    healthCheckPath: /health
     envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: buildpro-db
           property: connectionString
+      - key: REDIS_URL
+        fromService:
+          name: buildpro-redis
+          type: redis
+          property: connectionString
       - key: SECRET_KEY
         generateValue: true
       - key: ENVIRONMENT
         value: production
-      - key: DEBUG
-        value: "false"
       - key: ALLOWED_ORIGINS
-        value: https://buildpro-web.onrender.com,http://localhost:5000
-      - key: PYTHON_VERSION
-        value: "3.11"
+        sync: false
+      - key: USE_CLOUD_STORAGE
+        value: false
+      - key: MAX_UPLOAD_SIZE
+        value: 10485760
+    healthCheckPath: /health
 
-  # React Frontend (static site)
+  # Frontend Static Site
   - type: web
     name: buildpro-web
-    runtime: static
+    env: static
+    region: oregon
     buildCommand: cd apps/web && npm install && npm run build
     staticPublishPath: apps/web/dist
     envVars:
-      - key: NODE_VERSION
-        value: "20"
-    headers:
-      - path: /*
-        name: Cache-Control
-        value: no-cache
+      - key: VITE_API_URL
+        fromService:
+          name: buildpro-api
+          type: web
+          property: host
     routes:
       - type: rewrite
         source: /*
